--- a/JavaScript/AreaCodeJs/Area.html
+++ b/JavaScript/AreaCodeJs/Area.html
@@ -4,7 +4,57 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Area Calculator — Shapes</title>
- 
+ <style>
+    body{
+        padding: 20px;
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        background: rgb(227, 227, 227);
+    }
+
+
+    .container {
+        max-width: 400px;
+        background: whitesmoke;
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0 0 10px rgba(0,0,0,0.5);
+        margin: auto;
+        /* text-align: center; */
+    }
+
+    h2{
+        text-align: center;
+    }
+   
+    select, input{
+        width: 100%;
+        padding: 10px;
+        margin: 10px 0;
+        border-radius: 10px;
+        border: 1px solid #ccc;
+        /* text-align: center; */
+    }
+
+    button{
+        width: 100%;
+        padding: 10px;
+        background: #007bff;
+        color: white;
+        border: none;
+        margin-top: 10px;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+
+    #result{
+        margin-top: 15px;
+        font-size: 20px;
+        font-weight: bold;
+        color: #333;
+    }
+
+
+ </style>
 </head>
 <body>
     <div class="container">
@@ -27,7 +77,7 @@
         </div>
 
         <button>Calculate</button>
-        <div class="result">Area : </div>
+        <div id="result">Area : </div>
     </div>
     
 
