--- a/WebPages/AreaCodeJs/Area.html
+++ b/WebPages/AreaCodeJs/Area.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Area Calculator — Shapes</title>
- <!-- <style>
+ <style>
     body{
         padding: 20px;
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -54,7 +54,7 @@
     }
 
 
- </style> -->
+ </style>
 </head>
 <body>
     <div class="container">
